--- a/Normalisation/1NF_Exercise.ipynb
+++ b/Normalisation/1NF_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/pdsUjBWRz/iPa47hKq/P",
+      "authorship_tag": "ABX9TyPC2+lx4kRkDO+90oqo3Sj8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "df_1NF.to_csv('df_INF.csv', index=False)\n"
+        "ecommerce_1NF.to_csv('df_INF.csv', index=False)\n"
       ],
       "metadata": {
         "id": "7DeUBSUw1dyV"
