--- a/Normalisation/2NF_Example.ipynb
+++ b/Normalisation/2NF_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmIfa9J1LuFt5lbKzc6jsS",
+      "authorship_tag": "ABX9TyPw20nHjN04lFWZG9Jw8V0z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "_a94k79vk5XD",
         "outputId": "422ed068-5651-4843-e660-e379a0993f70",
@@ -106,19 +106,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Splitting the products_purchased Column:\n",
+        "**Splitting the products_purchased Column:**\n",
         "\n",
-        "`df_1NF.assign(products_purchased=df_1NF['products_purchased'].str.split(','))`\n",
+        "```\n",
+        "df_1NF.assign(products_purchased=df_1NF['products_purchased'].str.split(','))\n",
+        "```\n",
         "\n",
         "The products_purchased column likely contains multiple products in a single row as a comma-separated string (e.g., \"Laptop, Phone, Tablet\").\n",
         "\n",
-        "`.str.split(',') converts this string into a list (e.g., [\"Laptop\", \"Phone\", \"Tablet\"]).`\n",
+        "```\n",
+        ".str.split(',') converts this string into a list (e.g., [\"Laptop\", \"Phone\", \"Tablet\"]).\n",
+        "```\n",
         "\n",
-        "`assign()` creates a new DataFrame with this transformed column."
+        "`assign()` creates a new DataFrame with this transformed column.\n",
+        "\n",
+        "**Exploding the Column:**\n",
+        "\n",
+        "```\n",
+        "df_1NF_exploded = df_1NF_exploded.explode('products_purchased')\n",
+        "```\n",
+        "\n",
+        "```\n",
+        "explode()\n",
+        "```\n",
+        "\n",
+        "creates a separate row for each item in the list.\n",
+        "\n",
+        "If a row originally had \"Laptop, Phone, Tablet\", it will become three separate rows:\n"
       ],
       "metadata": {
         "id": "mYdE4tHKHYGT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YBw8eQmqIUGp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -142,7 +169,7 @@
           "height": 426
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,78 +619,6 @@
           "execution_count": 3
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Transform the Data to 1NF**\n",
-        "\n",
-        "---\n",
-        "\n",
-        "You need to eliminate multi-valued attributes (the courses column) and create a separate row for each course while preserving student details.\n",
-        "\n",
-        "**Initialise an Empty List**\n",
-        "Crates and empty list to store the transformed rows in a normalised format.\n",
-        "\n",
-        "normalised_data = []\n",
-        "\n",
-        "**Loop Through the Dataframe**\n",
-        "df.iterrows() - steps through each row of the DataFrame\n",
-        "The'_' is used because we dont' need the row index, jsut the row values\n",
-        "\n",
-        "for _, row in df.iterrows():\n",
-        "\n",
-        "**Extract Data from Each Row**\n",
-        "Split based on the ',' : \"Math, Science\" -> [\"Math,\"Science\"]\n",
-        "\n",
-        "    student_id = row[\"student_id\"]\n",
-        "    student_name = row[\"student_name\"]\n",
-        "    courses = row[\"courses\"].split(\", \")  # Splitting courses\n",
-        "\n",
-        "**Creates Normalised Rows**\n",
-        "For each course, a new dictionary is created and added to normalised_data\n",
-        "\n",
-        "    for course in courses:\n",
-        "        normalised_data.append({\"student_id\": student_id, \"student_name\": student_name, \"course\": course})\n",
-        "\n",
-        "**Create a New DataFrame**\n",
-        "Normailsed data, each course has it's own row.\n",
-        "\n",
-        "df_1NF = pd.DataFrame(normalised_data)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "QmZkD0TXn0J8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#normalised_data = []\n",
-        "\n",
-        "for _, row in df.iterrows():\n",
-        "    student_id = row[\"student_id\"]\n",
-        "    student_name = row[\"student_name\"]\n",
-        "    courses = row[\"courses\"].split(\", \")  # Splitting courses\n",
-        "\n",
-        "    for course in courses:\n",
-        "        normalised_data.append({\"student_id\": student_id, \"student_name\": student_name, \"course\": course})\n",
-        "\n",
-        "# Step 2: Create new DataFrame\n",
-        "df_1NF = pd.DataFrame(normalised_data)\n",
-        "\n",
-        "# Display the normalised DataFrame\n",
-        "# directly display the DataFrame using pandas' display function:\n",
-        "display(df_1NF)\n",
-        "\n",
-        "# Alternatively, simply print the dataframe:\n",
-        "#print(df_1NF)"
-      ],
-      "metadata": {
-        "id": "cdj9RziWn8i9"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
