--- a/Normalisation/2NF_Example.ipynb
+++ b/Normalisation/2NF_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8JE3GPeQVCNF6uit5i9ZI",
+      "authorship_tag": "ABX9TyNvGHMsOR6lHfsP7wFa5pVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,6 +133,7 @@
         "```\n",
         "\n",
         "Since explode() creates new rows, the index may no longer be sequential.\n",
+        "\n",
         "reset_index(drop=True) reassigns new index values without keeping the old ones."
       ],
       "metadata": {
@@ -615,74 +616,112 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Transform the Data to 1NF**\n",
+        "# **Convert to 2NF**\n",
+        "Students must split the data into three tables to remove partial dependencies:\n",
         "\n",
-        "---\n",
-        "\n",
-        "You need to eliminate multi-valued attributes (the courses column) and create a separate row for each course while preserving student details.\n",
-        "\n",
-        "**Initialise an Empty List**\n",
-        "Crates and empty list to store the transformed rows in a normalised format.\n",
-        "\n",
-        "normalised_data = []\n",
-        "\n",
-        "**Loop Through the Dataframe**\n",
-        "df.iterrows() - steps through each row of the DataFrame\n",
-        "The'_' is used because we dont' need the row index, jsut the row values\n",
-        "\n",
-        "for _, row in df.iterrows():\n",
-        "\n",
-        "**Extract Data from Each Row**\n",
-        "Split based on the ',' : \"Math, Science\" -> [\"Math,\"Science\"]\n",
-        "\n",
-        "    student_id = row[\"student_id\"]\n",
-        "    student_name = row[\"student_name\"]\n",
-        "    courses = row[\"courses\"].split(\", \")  # Splitting courses\n",
-        "\n",
-        "**Creates Normalised Rows**\n",
-        "For each course, a new dictionary is created and added to normalised_data\n",
-        "\n",
-        "    for course in courses:\n",
-        "        normalised_data.append({\"student_id\": student_id, \"student_name\": student_name, \"course\": course})\n",
-        "\n",
-        "**Create a New DataFrame**\n",
-        "Normailsed data, each course has it's own row.\n",
-        "\n",
-        "df_1NF = pd.DataFrame(normalised_data)\n",
-        "\n"
+        "Customers Table (customer_id, first_name, last_name)\n",
+        "Orders Table (order_id, customer_id, payment_method)\n",
+        "Order_Items Table (order_id, product, price)"
       ],
       "metadata": {
-        "id": "QmZkD0TXn0J8"
+        "id": "ycFU_y1KLZJW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Step 1: Create the Customers Table**"
+      ],
+      "metadata": {
+        "id": "pKBDgtMRMwvn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Extracts first_name and last_name from the df_INF_exploded and removes duplicates across both names.\n",
+        "\n",
+        "removes the ID that exist (drop=True)\n",
+        "\n",
+        "renames the index to customer_id\n",
+        "\n",
+        "index.name sets the customer_id index column as an actual column in the table.  Would make this a primary key (unique) in a relational database."
+      ],
+      "metadata": {
+        "id": "4JGPFuz0NpJy"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "#normalised_data = []\n",
+        "# Generate unique customers\n",
+        "customers = df_1NF[['first_name', 'last_name']].drop_duplicates().reset_index(drop=True)\n",
+        "customers['customer_id'] = customers.index + 1  # Assign unique customer IDs\n",
         "\n",
-        "for _, row in df.iterrows():\n",
-        "    student_id = row[\"student_id\"]\n",
-        "    student_name = row[\"student_name\"]\n",
-        "    courses = row[\"courses\"].split(\", \")  # Splitting courses\n",
-        "\n",
-        "    for course in courses:\n",
-        "        normalised_data.append({\"student_id\": student_id, \"student_name\": student_name, \"course\": course})\n",
-        "\n",
-        "# Step 2: Create new DataFrame\n",
-        "df_1NF = pd.DataFrame(normalised_data)\n",
-        "\n",
-        "# Display the normalised DataFrame\n",
-        "# directly display the DataFrame using pandas' display function:\n",
-        "display(df_1NF)\n",
-        "\n",
-        "# Alternatively, simply print the dataframe:\n",
-        "#print(df_1NF)"
+        "# Display the table\n",
+        "display_dataframe_to_user(name=\"Customers Table\", dataframe=customers)\n"
       ],
       "metadata": {
-        "id": "cdj9RziWn8i9"
+        "id": "IRlLyJP-NC3i",
+        "outputId": "ccf4a95f-b3b2-4076-abfd-7d54ff6443e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'display_dataframe_to_user' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-fb06d6c10bf3>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Display the table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdisplay_dataframe_to_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Customers Table\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataframe\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcustomers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'display_dataframe_to_user' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Merge with customers to assign customer_id to each order\n",
+        "df_1NF = df_1NF.merge(customers, on=['first_name', 'last_name'], how='left')\n",
+        "\n",
+        "# Create Orders Table\n",
+        "orders = df_1NF[['order_id', 'customer_id', 'payment_method']]\n",
+        "\n",
+        "# Display the table\n",
+        "display_dataframe_to_user(name=\"Orders Table\", dataframe=orders)\n"
+      ],
+      "metadata": {
+        "id": "s4oSagjiO035",
+        "outputId": "a9cba596-6e64-45da-d3bd-7b6c8ca38e10",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 382
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "\"['customer_id'] not in index\"",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-2418ab9dd727>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Create Orders Table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0morders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_1NF\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'order_id'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'customer_id'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'payment_method'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Display the table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4106\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4107\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4108\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_indexer_strict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"columns\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4110\u001b[0m         \u001b[0;31m# take() does not accept boolean indexers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6198\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6200\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raise_if_missing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6201\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6202\u001b[0m         \u001b[0mkeyarr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m_raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6250\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6251\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6252\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{not_found} not in index\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6254\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0moverload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: \"['customer_id'] not in index\""
+          ]
+        }
+      ]
     }
   ]
 }
